<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/product_text_view"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/product"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/unit_price_text_view"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/unitPrice"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/count_text_view"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/count"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/placeholder_text_view"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_price_text_view"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/totalPrice"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/placeholder_text_view2"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>