<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/jedalny_listok_produkt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/product_name_text_view"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <EditText
        android:id="@+id/count_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/countEditTextDefault" />

    <TextView
        android:id="@+id/unit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/unit"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/total_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/total_price_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <CheckBox
        android:id="@+id/row_food_menu_check_box"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center" />

</LinearLayout>