<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SendOrderActivity">

    <Button
        android:id="@+id/send_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sendOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_password_edit_text" />

    <EditText
        android:id="@+id/table_password_edit_text"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/send_order_guideline" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/table_password_edit_text"
        app:layout_constraintTop_toTopOf="@+id/send_order_guideline" />

    <Spinner
        android:id="@+id/tablesSpinner"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/send_order_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/restaurant_table_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/restaurant_table_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="10dp"
        android:text="@string/restaurantTable"
        app:layout_constraintBottom_toTopOf="@+id/send_order_guideline"
        app:layout_constraintEnd_toStartOf="@+id/tablesSpinner" />

    <android.support.constraint.Guideline
        android:id="@+id/send_order_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/total_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_order_button" />

</android.support.constraint.ConstraintLayout>